# SVOEngine

./: .gitignore  CMakeLists.txt  README.md  test.vox
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  vox
build-release/shaders/: raytrace.comp.spv
cmake/: CompileShaders.cmake
include/vox/: Application.h  Shader.h  SparseVoxelOctree.h  VulkanRenderer.h  Window.h
shaders/: bloom.comp  raytrace.comp  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace.rmiss  triangle.vert
src/: Application.cpp  Shader.cpp  SparseVoxelOctree.cpp  VulkanRenderer.cpp  VulkanRendererCommon.h  VulkanRendererCore.cpp  VulkanRendererDraw.cpp  VulkanRendererInit.cpp  VulkanRendererSwapchain.cpp  Window.cpp  main.cpp
src/graphics/: ComputePipeline.cpp  DescriptorSet.cpp  RayTracingPipeline.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanImage.cpp  VulkanShader.cpp
src/raytracing/: AccelerationStructure.cpp  ShaderBindingTable.cpp
src/render/: ComputeSceneRenderer.cpp  RayTracingSceneRenderer.cpp  SceneRenderer.cpp
src/scene/: Camera.cpp  Scene.cpp  SceneBuffers.cpp
